# Cpython_pytorch_converter

./: CMakeLists.txt  CMake_tmp.txt  README.md  compressor_share.ipynb  compressor_share.py  inference_share.cpp  note.txt
compress/: CMakeLists.txt  compress_test.cpp
toy_test/: RHO_example.f32  dummy_data.py  export_toy_model.py  model.pt2  real_test.py  residual_block.pt2  toy_model.py
